--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,30 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables (sensitive data)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Deployment artifacts
+*.zip
+netlify-deployment*.zip
+
+# Build artifacts
+build/
+coverage/
+
+# OS generated files
+Thumbs.db
+
+# IDE files
+*.swp
+*.swo
+*~
+
+# Temporary files
+tmp/
+temp/
