--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && git add . && git commit -m 'Deploy: $(date)' && git push",
+    "deploy:quick": "npm run build && git add dist && git commit -m 'Quick deploy' && git push",
+    "db:migrate": "supabase db push",
+    "db:reset": "supabase db reset",
+    "db:status": "supabase status",
+    "db:link": "supabase link",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
@@ -25,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "supabase": "^1.200.3",
     "vite": "^7.0.4"
   }
 }
